@@ -69,6 +69,8 @@ PHP_FUNCTION(getopt);
 PHP_FUNCTION(get_current_user);
 PHP_FUNCTION(set_time_limit);
 
+PHP_FUNCTION(header_register_callback);
+
 PHP_FUNCTION(get_cfg_var);
 PHP_FUNCTION(set_magic_quotes_runtime);
 PHP_FUNCTION(get_magic_quotes_runtime);
