@@ -131,6 +131,9 @@ typedef struct _sapi_globals_struct {
 	zend_bool sapi_started;
 	double global_request_time;
 	HashTable known_post_content_types;
+	zval *callback_func;
+	zend_fcall_info_cache fci_cache;
+	zend_bool callback_run;
 } sapi_globals_struct;
 
 
